added image, and html structure

--- a/index.html
+++ b/index.html
@@ -14,6 +14,79 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+
+    <header>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="www.davidabarrios.com">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
+
+    <section class="jumbotron">
+      <div>
+        <img src="images/IMG_0776.jpg" alt="Picture of David Barrios">
+      </div>
+      <div>
+        <h1>David Barrios</h1>
+        <p>Full Stack Web Developer</p>
+      </div>
+    </section>
+
+    <section class="main-content">
+      <div>
+        <h2>More About Me</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti necessitatibus rem, tenetur maxime in nisi praesentium? Corporis repellat quae ut architecto nostrum nisi fugiat, alias, sed odio vero quo! Itaque.</p>
+      </div>
+      <div>
+        <h2>Skills Set</h2>
+        <ul>
+          <li>Front End Development</li>
+          <li>Back End Development</li>
+          <li>Less</li>
+          <li>React</li>
+          <li>Python</li>
+          <li>Fluent in Spanish</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="work-history">
+      <h2>Work History</h2>
+      <table>
+        <tr>
+          <th>Yrs</th>
+          <th>Company</th>
+          <th>Title</th>
+        </tr>
+        <tr>
+          <td>5m</td>
+          <td>Trident Security</td>
+          <td>Security Officer</td>
+        </tr>
+        <tr>
+          <td>5m</td>
+          <td>Cellular Sales</td>
+          <td>Sales Representative</td>
+        </tr>
+        <tr>
+          <td>5m</td>
+          <td>ZipRecruiter</td>
+          <td>Account Executive</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Express Locations</td>
+          <td>Assistant Manager</td>
+        </tr>
+      </table>
+    </section>
+
+    <footer>
+      <p>Copyright &copy 2019</p>
+    </footer>
+  </div>
 </body>
 </html>
