finish with nav and jumbotron div

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>David Barrios - Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -15,7 +16,7 @@
 
 <body>
   <div class="container">
-
+    
     <header>
       <nav>
         <a href="index.html">Home</a>
@@ -29,7 +30,7 @@
       <div>
         <img src="images/IMG_0776.jpg" alt="Picture of David Barrios">
       </div>
-      <div>
+      <div class="jumbo-heading">
         <h1>David Barrios</h1>
         <p>Full Stack Web Developer</p>
       </div>
