added styling to the main content and work history

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <div>
         <h2>Skills Set</h2>
         <ul>
-          <li>Front End Development</li>
-          <li>Back End Development</li>
+          <li>HTML5, CSS3, Javascript</li>
+          <li>Express, Node.js, SQL</li>
           <li>Less</li>
-          <li>React</li>
+          <li>React, Redux</li>
           <li>Python</li>
           <li>Fluent in Spanish</li>
         </ul>
