added contact.html and finish styles touch ups

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="www.davidabarrios.com">Portfolio</a>
+        <a href="www.davidabarrios.com" target="_blank">Portfolio</a>
         <a href="contact.html">Contact</a>
       </nav>
     </header>
@@ -39,7 +39,7 @@
     <section class="main-content">
       <div>
         <h2>More About Me</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti necessitatibus rem, tenetur maxime in nisi praesentium? Corporis repellat quae ut architecto nostrum nisi fugiat, alias, sed odio vero quo! Itaque.</p>
+        <p>From a young age, I have been fascinated by computers and technology. I started by disassembling and reassembling computers. From there I got into web development. I started to teach myself the Front-End basics and currently I am taking classes to become a Full Stack web developer.</p>
       </div>
       <div>
         <h2>Skills Set</h2>
